# ScrapStation

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sources/: example.yaml
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/api/: auth_commands.rs  download_commands.rs  game_commands.rs  helpers.rs  library_commands.rs  mod.rs  settings_commands.rs  source_commands.rs  updater_commands.rs
src-tauri/src/auth/: cookie_utils.rs  domain_utils.rs  mod.rs  scripts.rs  webview_auth.rs
src-tauri/src/config/: auth.rs  extraction.rs  game.rs  hosts.rs  link_resolution.rs  mod.rs  paths.rs  settings.rs  source.rs  tags.rs  transformations.rs
src-tauri/src/engine/: archive_extractor.rs  download_manager.rs  download_tracker.rs  executable_detector.rs  extractor.rs  host_detector.rs  html_parser.rs  json_parser.rs  library_tracker.rs  link_resolver.rs  loader.rs  mod.rs  navigator.rs  scraper.rs  tags.rs  transformer.rs  webview_downloader.rs
src-tauri/src/scraper/: generic_detail_extractor.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/types/: detail_section.rs  mod.rs
src-tauri/src/utils/: http_client.rs  mod.rs  rate_limiter.rs
website/: docusaurus.config.js  package.json  sidebars.js
(+64 files in other folders)
