[package]
name = "ScrapStation"
version = "0.1.0"
description = "A generic scraper-based game launcher"
authors = ["Rayzhed"]
edition = "2021"

[lib]
name = "scrapstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "gzip", "deflate"] }
scraper = "0.25"
tokio = { version = "1", features = ["full"] }
fastrand = "2.0"
lazy_static = "1.5.0"
once_cell = "1.19"
serde_yaml = "0.9"
regex = "1.10"
chrono = "0.4"
urlencoding = "2.1"
url = "2.5"
dirs = "6"
serde_path_to_error = "0.1"
jsonpath-rust = "0.7"
log = "0.4"
env_logger = "0.11"
notify = "6"
base64 = "0.22"
async-recursion = "1.1"
futures-util = "0.3"
bytes = "1.5"

# Archive extraction
sevenz-rust = "0.6"
zip = "2.2"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
unrar = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
